cabal-version: 1.12
name:           chaosbox
version:        0.1.4.0
category:       Art
homepage:       https://github.com/mtesseract/chaosbox#readme
author:         Benjamin Kovach, Moritz Clasmeier
maintainer:     mtesseract@silverratio.net
copyright:      2018 Benjamin Kovach, 2019 Moritz Clasmeier
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

library
  exposed-modules:
      ChaosBox
      ChaosBox.Color
      ChaosBox.Generate
      ChaosBox.Coordinates
      ChaosBox.Path
  other-modules:
      Paths_chaosbox
  hs-source-dirs:
      src
  default-extensions: TypeApplications
                    , RecordWildCards
                    , LambdaCase
                    , DeriveFunctor
  build-depends:
      MonadRandom
    , base >=4.7 && <5
    , cairo
    , colour
    , directory
    , linear
    , mtl
    , optparse-applicative
    , process
    , random
    , random-fu >= 0.2.7.3
    , random-source
    , semigroups
    , time >= 1.9.3
    , transformers
    , rvar
  default-language: Haskell2010
